--- a/resources/views/app.twig
+++ b/resources/views/app.twig
@@ -5,7 +5,7 @@
         <!-- Basic -->
         <meta charset="UTF-8">
 
-        <title>ClickPortaria</title>
+        <title>Portaria.live</title>
         <meta name="keywords" content="" />
         <meta name="description" content="">
         <meta name="author" content="rafaelbozzetti@gmail.com">
