--- a/resources/views/app_login.twig
+++ b/resources/views/app_login.twig
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
 
-        <title>ClickPortaria</title>
+        <title>Portaria.live</title>
         <meta name="keywords" content="HTML5 Admin Template" />
         <meta name="description" content="Porto Admin - Responsive HTML5 Template">
         <meta name="author" content="okler.net">
@@ -36,7 +36,7 @@
         <!-- Head Libs -->
         <script src="/assets/vendor/modernizr/modernizr.js"></script>
     </head>
-    <body style="height:100%;background: url(/assets/images/modern-architecture-against-clear-sky.jpg) no-repeat center center fixed;-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;">
+    <body style="height:100%;background: url(/assets/images/concrete-building_pl.jpg) no-repeat center center fixed;-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;">
         <div style="height:1000px;">
             {% block content %}
 
