--- a/resources/views/app.twig
+++ b/resources/views/app.twig
@@ -9,6 +9,8 @@
         <meta name="keywords" content="" />
         <meta name="description" content="">
         <meta name="author" content="rafaelbozzetti@gmail.com">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
         <!-- Mobile Metas -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
