--- a/resources/views/app_login.twig
+++ b/resources/views/app_login.twig
@@ -8,6 +8,8 @@
         <meta name="keywords" content="HTML5 Admin Template" />
         <meta name="description" content="Porto Admin - Responsive HTML5 Template">
         <meta name="author" content="okler.net">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
         <!-- Mobile Metas -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
