Arquivo de referencia CSV

--- a/resources/views/admin.twig
+++ b/resources/views/admin.twig
@@ -129,7 +129,7 @@
 
                         <button class="btn btn-primary" style="margin-top:20px;" type="submit">Enviar</button>
 
-                        <button onclick="getfile();" class="btn btn-secundary" style="margin-top:20px;"><i class="glyphicon glyphicon-file"></i> Baixar Arquivo de referência</button>
+                        <button type="button" onclick="getfile();" class="btn btn-secundary" style="margin-top:20px;"><i class="glyphicon glyphicon-file"></i> Baixar Arquivo de referência</button>
 
                       </form>
 
